Corrected the vertical alignment of the form controls for browsers that set the bottom as the default alignment. (Firefox)

--- a/css/homestead.css
+++ b/css/homestead.css
@@ -46,6 +46,7 @@ h2 {
     display: table-cell;
     height: 100%;
     overflow: auto;
+    vertical-align: top;
     width: 80%;
   }
 
